src/test/ui/error-codes/E0504.stderr
error[E0504]: cannot move `fancy_num` into closure because it is borrowed
  --> $DIR/E0504.rs:10:40
   |
LL |     let fancy_ref = &fancy_num;
   |                      --------- borrow of `fancy_num` occurs here
...
LL |         println!("child function: {}", fancy_num.num); //~ ERROR E0504
   |                                        ^^^^^^^^^ move into closure occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0504`.
